# incident-sense

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.en.md  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  release.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/data/: incidents.json
backend/data/precomputed/: clusters.json  embeddings.npz
backend/prototypes/eval_harness/: .gitignore  NOTES.md  __init__.py  adapters.py  build_manifest.py  fixtures.py  judges.py  metrics.py  pricing.py  run.py  runner.py  schema.py  test_metrics.py  writers.py
backend/prototypes/eval_harness/dataset/: cases.jsonl  manifest.json
backend/prototypes/eval_harness/selection/: __init__.py  build_manifest.py  compare.py  contexts.py  preflight.py  probe.py  sentinel.py
backend/prototypes/eval_harness/selection/dataset/: cases.jsonl  manifest.json
backend/scripts/: generate_dataset.py  ingest.py  precompute.py
backend/src/incident_sense/: __init__.py  config.py  logging.py  main.py  providers.py
backend/src/incident_sense/api/: __init__.py  clusters.py  health.py  incidents.py  suggest.py
backend/src/incident_sense/clustering/: __init__.py
backend/src/incident_sense/data/: __init__.py  archetypes.py  ingest.py  loader.py  precomputed.py  repository.py
backend/src/incident_sense/models/: __init__.py  cluster.py  incident.py  incident_list.py  suggest.py
backend/src/incident_sense/rag/: __init__.py  clients.py  pipeline.py  postfilter.py
backend/tests/: conftest.py  test_api.py  test_incidents.py  test_providers.py  test_rag.py
design/: claude-design-prompt.md  copiloto-contextual.html  incidente-detalhe.html  incidentes.html  prototype.css
docs/: architecture.md  clustering-flow.md  data-generation.md  rag-flow.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/assets/: README.md
docs/decisions/: 0001-arquitetura-e-stack.md  0002-llamaindex-no-rag.md  0003-bertopic-no-clustering.md  0004-openrouter-mais-openai.md  0005-qdrant-como-vector-db.md  0006-execucao-local-e-determinismo.md  0007-licenca-mit.md  0008-saida-estruturada.md  0009-deps-clustering-opcionais.md  0010-dataset-sintetico.md  README.md
docs/diagrams/: arch-en.mmd  arch-pt.mmd  rag-en.mmd  rag-pt.mmd
docs/evals/selecao-modelos-openrouter/: README.md  comparison.json  projection.json
docs/evals/sentinela-deepseek-v4-pro/: README.md  projection.json  sentinel.json
docs/research/: arquitetura-conversacional-e-streaming.md  evals-rag-conversacional-bilingue.md  modelos-openrouter-copiloto-contextual.md  threat-model-e-controles-do-copiloto-contextual.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/como-funciona/: page.tsx
frontend/app/incidentes/: page.tsx
frontend/app/incidentes/[number]/: page.tsx
frontend/app/recorrencias/: page.tsx
frontend/components/: ClusterReveal.tsx  RagNeighborFlight.tsx  ScatterMap.tsx  app-shell.tsx  icons.tsx  markdown.tsx  ui.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/lib/: a11y.ts  api.ts  colors.ts  command-palette.ts  incidents.ts  model.ts  motion.ts  plot.ts  types.ts
frontend/tests/: api.test.ts  command-palette.test.ts  incidents.test.ts  model.test.ts  plot.test.ts  ui.test.tsx
